[gd_scene load_steps=11 format=2]

[ext_resource path="res://graphics/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://graphics/BeatLane.tscn" type="PackedScene" id=2]
[ext_resource path="res://music/24_hour_cinderella.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/RhythmSession.gd" type="Script" id=4]
[ext_resource path="res://scripts/BeatMapGenerator.gd" type="Script" id=5]
[ext_resource path="res://scenes/MusicPlayer.gd" type="Script" id=6]
[ext_resource path="res://scenes/score.gd" type="Script" id=7]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/FerriteCoreDX-Display.otf"

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = SubResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[node name="RhythmSession" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Overlay" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0

[node name="Score" type="Label" parent="Overlay"]
margin_right = 1256.0
margin_bottom = 696.0
size_flags_vertical = 1
theme = SubResource( 3 )
text = "0"
script = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 648.0

[node name="BeatLanes" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1280.0
margin_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/separation = 96
alignment = 1

[node name="BeatLane" parent="MarginContainer/BeatLanes" groups=["beat_lanes"] instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_right = 368.0
margin_bottom = 648.0
size_flags_horizontal = 5
key_press = "beat_a"

[node name="BeatLane2" parent="MarginContainer/BeatLanes" groups=["beat_lanes"] instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 464.0
margin_right = 592.0
margin_bottom = 648.0
size_flags_horizontal = 5
key_press = "beat_s"

[node name="BeatLane3" parent="MarginContainer/BeatLanes" groups=["beat_lanes"] instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 688.0
margin_right = 816.0
margin_bottom = 648.0
size_flags_horizontal = 5
key_press = "beat_d"

[node name="BeatLane4" parent="MarginContainer/BeatLanes" groups=["beat_lanes"] instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 912.0
margin_right = 1040.0
margin_bottom = 648.0
size_flags_horizontal = 5
key_press = "beat_f"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
script = ExtResource( 6 )

[node name="BeatMapGenerator" type="Node" parent="."]
script = ExtResource( 5 )

[connection signal="playback_progressed" from="MusicPlayer" to="MarginContainer/BeatLanes/BeatLane" method="on_playback_progressed"]
[connection signal="playback_progressed" from="MusicPlayer" to="MarginContainer/BeatLanes/BeatLane2" method="on_playback_progressed"]
[connection signal="playback_progressed" from="MusicPlayer" to="MarginContainer/BeatLanes/BeatLane3" method="on_playback_progressed"]
[connection signal="playback_progressed" from="MusicPlayer" to="MarginContainer/BeatLanes/BeatLane4" method="on_playback_progressed"]
